chore: merged LEAP-603

--- a/packages/desktop-app/src/app/components/dialogs/edit-dialog/edit-dialog.component.html
+++ b/packages/desktop-app/src/app/components/dialogs/edit-dialog/edit-dialog.component.html
@@ -2,7 +2,7 @@
 
 <form [formGroup]="form" class="edit-form form center-vertical text-left">
 
-  <h4><img src="./assets/images/{{getIconForProvider(provider)}}" alt="" title="" class="title-img" /> {{form.controls['name'].value}}</h4>
+  <h4><img src="./assets/images/{{getIconForProvider(accountType)}}" alt="" title="" class="title-img" /> {{form.controls['name'].value}}</h4>
   <br>
 
   <!-- =============================== -->
