--- a/packages/desktop-app/src/app/app.component.html
+++ b/packages/desktop-app/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="dragger"></div>
 <div class="mask"></div>
 <app-tray-menu></app-tray-menu>
-<div class="app-{{appService.detectOs().toString()}}-detected" (click)="closeAllRightClickMenus();">
+<div class="app-{{appService.detectOs()}}-detected" (click)="closeAllRightClickMenus();">
   <router-outlet></router-outlet>
 </div>
