--- a/packages/desktop-app/src/app/components/dialogs/options-dialog/options-dialog.component.html
+++ b/packages/desktop-app/src/app/components/dialogs/options-dialog/options-dialog.component.html
@@ -245,16 +245,23 @@
           </div>
 
           <div class="form-group scrollable max-height-230">
-            <h4> Installed plugins</h4>
+            <h4> Installed plugins <i class="fa fa-refresh pull-right" (click)="refreshPluginList()"></i></h4>
             <table class="table">
+              <thead>
+                <th>Name</th>
+                <th>Version</th>
+                <th>&nbsp;</th>
+                <th>Enabled</th>
+              </thead>
               <tbody>
               <ng-container *ngFor="let plugin of pluginList">
                 <tr>
-                  <td>{{plugin.metadata.name}}</td>
-                  <td>{{plugin.metadata.author}}</td>
+                  <td>{{plugin.metadata.uniqueName}}</td>
+                  <td>{{plugin.version}}</td>
+                  <td><i class="fa fa-info-circle" matTooltip="Author: {{plugin.metadata.author}}<br>Description: {{plugin.metadata.description}}<br>Supported OS: {{plugin.metadata.supportedOS.join(',')}}<br>Supported Sessions: {{plugin.metadata.supportedSessions.join(',')}}"></i></td>
                   <td>
-                    <mat-slide-toggle class="inline" color="#21B4D8" (toggleChange)="togglePluginActivation(plugin)"
-                                      [checked]="plugin.metadata.active">Active
+                    <mat-slide-toggle class="inline" color="primary" (toggleChange)="togglePluginActivation(plugin)"
+                                      [checked]="plugin.metadata.active">
                     </mat-slide-toggle>
                   </td>
                 </tr>
