chore: styled plugin contextual menu and option menu

--- a/packages/desktop-app/src/app/components/dialogs/options-dialog/options-dialog.component.html
+++ b/packages/desktop-app/src/app/components/dialogs/options-dialog/options-dialog.component.html
@@ -240,7 +240,7 @@
 
         <div class="form-group">
           <div class="form-field form-control-input-button max-width">
-            <input formControlName="pluginDeepLink" type="text" class="form-control max-width" placeholder="Add here a leapp://<package> valid uri">
+            <input formControlName="pluginDeepLink" type="text" class="form-control max-width" placeholder="Insert an npm package name">
             <button class="button" type="button" (click)="installPlugin();"><i class="moon-Add"></i></button>
           </div>
 
