--- a/packages/desktop-app/src/app/components/dialogs/options-dialog/options-dialog.component.scss
+++ b/packages/desktop-app/src/app/components/dialogs/options-dialog/options-dialog.component.scss
@@ -150,7 +150,7 @@
     text-align: right;
   }
   i.fa-apple, i.fa-windows, i.fa-linux {
-    color: $main-color-light;
+    color: #52A8DC;
   }
 }
 
