--- a/packages/desktop-app/src/assets/scss/global.scss
+++ b/packages/desktop-app/src/assets/scss/global.scss
@@ -107,10 +107,10 @@ html, body {
     z-index: 1070!important;
   }
   .mat-slide-toggle.mat-checked .mat-slide-toggle-bar {
-    background-color: rgba(33, 212, 184, 0.45);
+    background-color: rgba(82, 168, 220, 0.45);
   }
   .mat-slide-toggle.mat-checked .mat-slide-toggle-thumb {
-    background-color: #21D4B8;
+    background-color: #52A8DC;
   }
   .allow-cr {
     white-space: pre-line;
