--- a/packages/desktop-app/src/assets/scss/dark-theme.scss
+++ b/packages/desktop-app/src/assets/scss/dark-theme.scss
@@ -496,6 +496,6 @@ body.dark-theme {
   }
 
   .plugin-table thead th {
-    background-color: unset!important;
+    background-color: $dark-modal-background!important;
   }
 }
