chore: disabled plugin system

--- a/packages/desktop-app/src/app/components/dialogs/options-dialog/options-dialog.component.html
+++ b/packages/desktop-app/src/app/components/dialogs/options-dialog/options-dialog.component.html
@@ -230,7 +230,7 @@
       </div>
     </mat-tab>
 
-    <mat-tab>
+    <mat-tab *ngIf=!eConstants.disablePluginSystem>
       <ng-template mat-tab-label>
         <i class="mat-tab-icon moon-Puzzle"></i>
         <span class="mat-tab-label-text">Plugins</span>
