chore: testing integration create from cli

--- a/packages/desktop-app/src/app/components/integration-bar/integration-bar.component.html
+++ b/packages/desktop-app/src/app/components/integration-bar/integration-bar.component.html
@@ -60,7 +60,7 @@
             <div class="form-field">
               <div class="form-group">
                 <label>Auth. method</label>
-                <ng-select placeholder="Choose an Authentication method" formControlName="defaultBrowserOpening" bindLabel="type" bindValue="type" [clearable]="false" [items]="[{type: eConstants.inApp.toString() }, {type: eConstants.inBrowser.toString() }]" [(ngModel)]="selectedConfiguration.browserOpening"></ng-select>
+                <ng-select placeholder="Choose an Authentication method" formControlName="defaultBrowserOpening" bindLabel="type" bindValue="type" [clearable]="false" [items]="[{type: eConstants.inApp }, {type: eConstants.inBrowser }]" [(ngModel)]="selectedConfiguration.browserOpening"></ng-select>
               </div>
             </div>
           </div>
