--- a/packages/desktop-app/src/app/components/dialogs/options-dialog/options-dialog.component.scss
+++ b/packages/desktop-app/src/app/components/dialogs/options-dialog/options-dialog.component.scss
@@ -157,7 +157,7 @@
     text-align: right;
   }
   i.fa-apple, i.fa-windows, i.fa-linux {
-    color: #52A8DC;
+    color: $dark-main-background;
   }
 }
 
