--- a/packages/desktop-app/src/assets/scss/global.scss
+++ b/packages/desktop-app/src/assets/scss/global.scss
@@ -107,10 +107,10 @@ html, body {
     z-index: 1070!important;
   }
   .mat-slide-toggle.mat-checked .mat-slide-toggle-bar {
-    background-color: rgba(82, 168, 220, 0.45);
+    background-color: rgba(58, 57, 57, 0.45);
   }
   .mat-slide-toggle.mat-checked .mat-slide-toggle-thumb {
-    background-color: #52A8DC;
+    background-color: $dark-main-background;
   }
   .allow-cr {
     white-space: pre-line;
@@ -734,4 +734,8 @@ body:not(.dark-theme) tr:hover td.table-column-1.selected .session-name-td .hove
 .compact tr:hover i.hover-azure ~ span {
   position: relative;
   top: 2px;
+}
+
+.blackery {
+  color: $text-color;
 }
