fix: added a link to the message error involving ssm plugin

--- a/packages/desktop-app/src/app/components/snackbar/snackbar.component.html
+++ b/packages/desktop-app/src/app/components/snackbar/snackbar.component.html
@@ -1,4 +1,4 @@
-<div class="holder">
+<div class="holder {{this.data.link ? 'add-error-link-cursor' : ''}}" (click)="processEventualLink();">
   <div class="icon float">
     <i *ngIf="data.className === 'toast-success'" class="fal fa-check-circle"></i>
     <i *ngIf="data.className === 'toast-info'" class="fal fa-info-circle"></i>
